<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".Creat_Account">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:id="@+id/welcome_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_layout"
        android:layout_below="@+id/welcome_text"
        android:layout_marginVertical="110dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/create_account_btn"
            android:text="@string/create_account"
            android:backgroundTint="#FFC400"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            />

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/login_text_view_btn"
            android:text="@string/login" />


    </LinearLayout>

</RelativeLayout>